fix: body scrolling along x-axis on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,8 @@
 
 *::-webkit-scrollbar-thumb {
 	background-color: var(--secondary);
-	/* border-radius: 1rem; */
-	/* border-right: 3px solid var(--primary); */
+	/* border-radius: 1rem;
+	border-right: 3px solid var(--primary); */
 	border-left: 3px solid var(--primary);
 }
 
